src/test/resources/syntax_errors/return_while_stm.notc
void main() {
    int i = 0;
    return while (true) i = 1; else i = 2;
}
